# ft_package

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
ft_package/: ft_package.py
ft_package.egg-info/: PKG-INFO  SOURCES.txt
tests/: test.py
