[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
authors = [
  { name="Beqa Tvildiani", email="tvildiani2001@gmail.com" },
]
description = "A small package from 42 school subject"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/BEQSONA-cmd/ft_package"
Issues = "https://github.com/BEQSONA-cmd/ft_package/issues"